; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpResp.c_httpSendTaosdErrorResp.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpResp.c_httpSendTaosdErrorResp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"Bad Request\00", align 1
@tsError = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @httpSendTaosdErrorResp(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 400, i32* %5, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32*, i32** @tsError, align 8
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @httpSendErrorRespImp(i32* %6, i32 %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %13)
  ret void
}

declare dso_local i32 @httpSendErrorRespImp(i32*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
